force-app/main/default/objects/Property_Contact__c.object
<CustomObject>
    <description>Create 4/24/17 to test and see if this is a better to maintain property contact information.</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account__r.Type)</formula>
        <inlineHelpText>Read-only field. To change this, please update the account record by clicking on the name of the account and updating the &apos;type&apos; field there.</inlineHelpText>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the organizational affiliation of this contact.  Try different spellings and acronyms. If you cannot find it, create a new account. Click on Create New in left side bar and right click on Account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property Contacts</relationshipLabel>
        <relationshipName>Property_Interest_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is this an active contact?  If so, leave checked. If this is a prior owner, manager or other contact, please un-check the box.</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Category__c</fullName>
        <inlineHelpText>Select the role of the contact or select other and describe in the related description field.</inlineHelpText>
        <label>Contact Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                    <label>Manager/Caretaker</label>
                </value>
                <value>
                    <fullName>Funder</fullName>
                </value>
                <value>
                    <fullName>Lessee</fullName>
                </value>
                <value>
                    <fullName>Easement Holder</fullName>
                </value>
                <value>
                    <fullName>Owner Representative</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ranger/Natural Resource Manager</fullName>
                </value>
                <value>
                    <fullName>External Reporting Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the name of the contact person. You may need to create a new contact if you created a new account. Please make sure to fill this in even if the name of the account is the same as the name of the contact or the email address will not show up.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property Contacts</relationshipLabel>
        <relationshipName>Property_Interest_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Describe_Contact_Role__c</fullName>
        <inlineHelpText>If selecting &quot;Other&quot; for the contact category, please describe here OR if you wish to provide more detail about this contact&apos;s role related to the property.</inlineHelpText>
        <label>Describe Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Contact_Info__c</fullName>
        <description>Formula field that pulls in all of the property contact info - for rolling up to the Property Interest record.</description>
        <formula>TEXT(Contact_Category__c)&amp;&quot;: &quot;&amp;IF(NOT(ISBLANK(Contact__c)),Contact__r.FirstName&amp;&quot; &quot;&amp;Contact__r.LastName, &quot;&quot;)&amp;
IF(ISBLANK(Contact__c), Account__r.Name, IF(Account__r.Name = Contact__r.FirstName &amp; &quot; &quot;&amp;Contact__r.LastName, &quot;&quot;, &quot;, &quot;&amp;Account__r.Name))&amp;
IF(On_Site_Contact__c=TRUE, &quot;, &quot;&amp;&quot;On-Site Contact? Yes&quot;, &quot;&quot;)&amp;
IF(AND(Account__r.Phone &lt;&gt; &quot;&quot;, Account__r.Phone &lt;&gt; Contact__r.Phone),  &quot;, &quot;&amp;&quot;Account Phone: &quot;&amp; Account__r.Phone, &quot;&quot;)&amp;
IF(Contact__r.Phone = &quot;&quot;, &quot;&quot;, &quot;, &quot;&amp;&quot;Contact Phone: &quot;&amp; Contact__r.Phone)&amp;
IF(Contact__r.Email = &quot;&quot;, &quot;&quot;, &quot;, &quot;&amp;&quot;Email: &quot;&amp; Contact__r.Email)</formula>
        <label>Full Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Easement_Contacts__c</fullName>
        <description>For view selection by current user checks monitor assigned field</description>
        <formula>$User.Id = Property_Interest__r.Monitor_Assigned__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Easement Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Site_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this contact is on-site.</inlineHelpText>
        <label>On Site Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Interest_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Property Interest Group or Property Management Unit that this contact is associated with.</inlineHelpText>
        <label>Property Interest Group</label>
        <referenceTo>Property_Management__c</referenceTo>
        <relationshipLabel>Property Contacts</relationshipLabel>
        <relationshipName>Property_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Interest to which this contact is related.</inlineHelpText>
        <label>Property Interest</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Property Contacts</relationshipLabel>
        <relationshipName>Property_Interest_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this contact is associated with a specific subdivision, put the name(Number) of the Subdivision here.</inlineHelpText>
        <label>Subdivision</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This subdivision does not exist in this property interest. Please double check the subdivision name and number.</errorMessage>
            <filterItems>
                <field>$Source.Property_Interest__c</field>
                <operation>equals</operation>
                <valueField>Subdivision__c.Property_Interest__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Property Contacts</relationshipLabel>
        <relationshipName>Property_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Property Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property_Interest__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Easement_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Property_Interest__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Category__c</columns>
        <columns>On_Site_Contact__c</columns>
        <columns>Subdivision__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Easement_Contacts__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Easement Contacts</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PIC-{00}</displayFormat>
        <label>Property Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Subdivision_req_if_No_Subdivisions_gtr_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Property_Interest__r.Subdivisions_Monitored_Separately__c, ISBLANK(Subdivision__c))</errorConditionFormula>
        <errorDisplayField>Subdivision__c</errorDisplayField>
        <errorMessage>Subdivision cannot be blank if the subdivisions are monitored separately.</errorMessage>
    </validationRules>
</CustomObject>